# nautilus-trader

./: .env.example  .gitignore  DELTA_NEUTRAL_IMPLEMENTATION.md  Makefile  README.md  SETUP_GUIDE.md  WORKSPACE_CLEAN.md  check_binance_order.py  example_strategy_test.py  pyproject.toml  quickstart.sh  requirements-dev.txt  requirements.txt  setup.py  test_binance_connectivity.py  test_binance_events.py  test_binance_order.py  test_dual_routing.py  test_order_events.py  test_order_routing.py  verify_setup.py
config/: dev.env  prod.env  test.env
demo_backtest_data/: market_data.db
docs/: historical_data_management.md  how_to_run_backtest.md  live_trading_preparation.md  live_trading_setup.md  market_data_architecture.md  professional_strategy_guide.md
examples/: backtest_delta_neutral.py  backtesting_demo.py  complete_live_integration_test.py  complete_strategy_pipeline.py  delta_neutral_demo.py  delta_neutral_live_paper_trading.py  delta_neutral_paper_trading.py  final_integration_demo.py  historical_data_demo.py  hyperliquid_zerox_backtest.py  hyperliquid_zerox_live.py  integration_success_demo.py  live_trading_final.py  market_data_integration.py  professional_uniswap_config.py  run_live_trading.py  simple_live_integration_test.py  simple_live_test.py  test_dydx_rest_adapter.py  test_dydx_simple.py  test_dydx_v4_connection.py
scripts/: check_balances.py  check_positions.py  cleanup_obsolete_files.py  fix_ssl_certificates.py  load_historical_data.py  test_dydx_connection.py  verify_config.py
tests/: conftest.py  test_backtesting_engine.py  test_backtesting_simple.py  test_binance_adapter.py  test_config.py  test_core_interfaces.py  test_core_simple.py  test_data_ingestion.py  test_data_ingestion_simple.py  (+8 more)
(+40 files in other folders)
